tests/paczka1/fuzzy1/46239120.err
Error in line 1: 8Zr S704 70,1
Error in line 5: auZ4AVh53 A365 76,5
Error in line 6: auZ4AVh53 S704 42,9
Error in line 21: auZ4AVh53 S138 90,78
Error in line 17: Vs4Gq A365 18,8
Error in line 23: auZ4AVh53 S138 92,6
Error in line 20: 8Zr A365 96,6
Error in line 22: Vs4Gq S138 77,7
